--- a/Parking Garage Project.ipynb
+++ b/Parking Garage Project.ipynb
@@ -31,9 +31,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, True, False, False, False, False]\n",
+      "{1: 'Unpaid'}\n",
+      "You're parked in spot #  1\n",
+      "[0, True, True, False, False, False]\n",
+      "{1: 'Unpaid', 2: 'Unpaid'}\n",
+      "You're parked in spot #  2\n",
+      "[0, True, True, True, False, False]\n",
+      "{1: 'Unpaid', 2: 'Unpaid', 3: 'Unpaid'}\n",
+      "You're parked in spot #  3\n",
+      "[0, True, True, True, True, False]\n",
+      "{1: 'Unpaid', 2: 'Unpaid', 3: 'Unpaid', 4: 'Unpaid'}\n",
+      "You're parked in spot #  4\n",
+      "[0, True, True, True, True, True]\n",
+      "{1: 'Unpaid', 2: 'Unpaid', 3: 'Unpaid', 4: 'Unpaid', 5: 'Unpaid'}\n",
+      "You're parked in spot #  5\n",
+      "Sorry, parking lot is full. Check back later.\n",
+      "[0, True, True, True, False, True]\n",
+      "You're parked in spot #  4\n",
+      "[0, True, True, False, False, True]\n",
+      "You're parked in spot #  3\n",
+      "[0, True, False, False, False, True]\n",
+      "You're parked in spot #  2\n",
+      "[0, False, False, False, False, True]\n",
+      "You're parked in spot #  1\n",
+      "[False, False, False, False, False, True]\n",
+      "You're parked in spot #  0\n",
+      "The parking lot is now empty.\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
@@ -110,7 +144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
